# TvPlayer

./: settings.gradle
camera/src/androidTest/java/com/jake/camera/: ExampleInstrumentedTest.java
camera/src/main/: AndroidManifest.xml
camera/src/main/java/com/jake/camera/: CameraFragment.java  CameraGLView.java  CameraView.java
camera/src/main/java/com/jake/camera/camera/: CameraConfigure.java
camera/src/main/java/com/jake/camera/encoder/: MediaAudioEncoder.java  MediaEncoder.java  MediaMuxerWrapper.java  MediaVideoEncoder.java
camera/src/main/java/com/jake/camera/glutils/: EGLBase.java  GLDrawer2D.java  RenderHandler.java
camera/src/main/res/layout/: fragment_main.xml
camera/src/test/java/com/jake/camera/: ExampleUnitTest.java
clip/: CMakeLists.txt  build.gradle
clip/src/androidTest/java/com/jake/clip/: ExampleInstrumentedTest.java
clip/src/main/: AndroidManifest.xml
clip/src/main/cpp/clip/: StringUtil.cpp  VideoClip.cpp  VideoExtract.cpp  VideoFrameExtract.cpp
clip/src/main/cpp/clip/include/: Log.h  StringUtil.h  VideoClip.h  VideoExtract.h  VideoFrameExtract.h
clip/src/main/java/com/jake/clip/: VideoClipFragment.java  VideoClipJni.java
clip/src/main/res/layout/: fragment_videoclip.xml
clip/src/test/java/com/jake/clip/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ijkplayer-example/: build.gradle
ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/activities/: FileExplorerActivity.java  VideoActivity.java
ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/fragments/: SampleMediaListFragment.java
ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/widget/media/: IjkVideoView.java
ijkplayer-example/src/main/res/layout/: activity_player.xml
ijkplayer-example/src/main/res/values/: strings_pref.xml
simple/: build.gradle
simple/src/androidTest/java/com/jake/simple/: ExampleInstrumentedTest.java
simple/src/main/: AndroidManifest.xml
simple/src/main/java/com/jake/simple/: BaseListAdapter.java  BaseViewHolder.java  CameraDemoActivity.java  MainActivity.java  SimpleApplication.java  TvActivity.java  TvListActivity.java  VideoClipActivity.java
simple/src/main/res/layout/: activity_camera.xml  activity_tv.xml  activity_video_clip.xml  item_video.xml
simple/src/main/res/values/: strings.xml
simple/src/test/java/com/jake/simple/: ExampleUnitTest.java
